fix bm algorithm

--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -13,9 +13,13 @@
     <div class="chatscroll">
         <table class="chat">
             <tr><td><p class="datebubble">Today</p></td></tr>
-            <tr><td><p class="botbubble">Halo! Bisa ceritakan masalahmu?</p><p class="bottime">12:11</p></td></tr>
-            <tr><td><p class="userbubble">Bisa bantu aku gakk?</p><p class="usertime">12:14</p></td></tr>
-            <tr><td><p class="botbubble"><b>[FITUR]</b><br>1. Mencatat task<br>2. Melihat daftar task<br>3. Menampilkan tanggal task dan deadline tugas<br>4. Mengubah tanggal task<br>5. Menghapus task dari daftar<br><br><b>[DAFTAR KATA PENTING]</b><br>1. Kuis<br>2. Ujian<br>3. Tubes<br>4. Tucil<br>5. Praktikum<br></p><p class="bottime">12:14</p></td></tr>
+            <tr><td><p class="botbubble">Halo! Bisa ceritakan masalahmu?</p><p class="bottime">13:51</p></td></tr>
+            <tr><td><p class="userbubble">hai</p><p class="usertime">13:51</p></td></tr>
+            <tr><td><p class="botbubble">Halo! Bisa ceritakan masalahmu?</p><p class="bottime">13:51</p></td></tr>
+            <tr><td><p class="userbubble">Halo</p><p class="usertime">13:52</p></td></tr>
+            <tr><td><p class="botbubble">Halo! Bisa ceritakan masalahmu?</p><p class="bottime">13:52</p></td></tr>
+            <tr><td><p class="userbubble">Brr</p><p class="usertime">13:52</p></td></tr>
+            <tr><td><p class="botbubble">Maaf, bot tidak mengenal pesan itu. Bisa ceritakan masalahmu?</p><p class="bottime">13:52</p></td></tr>
         </table>
     </div>
     <form action="http://127.0.0.1:5000/Chat" method=POST>
