--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -13,13 +13,13 @@
     <div class="chatscroll">
         <table class="chat">
             <tr><td><p class="datebubble">Today</p></td></tr>
-            <tr><td><p class="botbubble">Halo! Bisa ceritakan masalahmu?</p><p class="bottime">13:51</p></td></tr>
-            <tr><td><p class="userbubble">hai</p><p class="usertime">13:51</p></td></tr>
-            <tr><td><p class="botbubble">Halo! Bisa ceritakan masalahmu?</p><p class="bottime">13:51</p></td></tr>
-            <tr><td><p class="userbubble">Halo</p><p class="usertime">13:52</p></td></tr>
-            <tr><td><p class="botbubble">Halo! Bisa ceritakan masalahmu?</p><p class="bottime">13:52</p></td></tr>
-            <tr><td><p class="userbubble">Brr</p><p class="usertime">13:52</p></td></tr>
-            <tr><td><p class="botbubble">Maaf, bot tidak mengenal pesan itu. Bisa ceritakan masalahmu?</p><p class="bottime">13:52</p></td></tr>
+            <tr><td><p class="botbubble">Halo! Bisa ceritakan masalahmu?</p><p class="bottime">18:02</p></td></tr>
+            <tr><td><p class="userbubble">Halo, perusahaan saya di bidang food and beverages, ingin bertanya bagaimana cara memasang ads untuk website kami</p><p class="usertime">18:02</p></td></tr>
+            <tr><td><p class="botbubble">Kamu ingin memasang advertisement dari penyedia iklan apa? (Instagram/Facebook/Google)</p><p class="bottime">18:02</p></td></tr>
+            <tr><td><p class="userbubble">Instagram</p><p class="usertime">18:02</p></td></tr>
+            <tr><td><p class="botbubble"><b>Cara memasang ads di Instagram:</b><br>1. Buat Fanpage di Facebook<br>2. Pilih Create Ads<br>3. Pilih tujuan beriklan<br>4. Tentukan target audiens dan anggaran<br>5. Format iklan</p><p class="bottime">18:02</p></td></tr>
+            <tr><td><p class="botbubble">Bila ada kendala, kamu bisa langsung menghubungi salah satu mentor kami dengan menekan tombol di bawah ini</p><p class="bottime">18:02</p></td></tr>
+            <tr><td><form><a href="http://localhost:5000/displayKontakMentor" id=hubmentorbutton class="hubungi-mentor-button"><b><i>Hubungi Mentor</i></b></a></form><p></p></td></tr>
         </table>
     </div>
     <form action="http://127.0.0.1:5000/Chat" method=POST>
@@ -27,6 +27,6 @@
             <input type="text" name="messageInput" id="message" placeholder="Type your message..." autocomplete="off">
             <input type="submit" id="send" name="sendButton" value="send">
         </div>
-        </form>
+    </form>
     </body>
 </html>
