fix bugs, add response 0.8s delay

--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -7,26 +7,36 @@
     <div class="header">
         <table class="headergrid" cellspacing=0 cellpadding=0>
             <tr><td class="avatarimg"><img class="avatar" src="static/avatar.png"></td>
-            <td><p class="botname"><a class="botlink" href="http://127.0.0.1:5000/Chat"><b>Pilihmentor Bot</b></a></p></td></tr>
+            <td><p class="botname"><a class="botlink" href="http://localhost:5000/Chat"><b>Pilihmentor Bot</b></a></p></td></tr>
         </table>
     </div>
+    <div class="chatarea">
     <div class="chatscroll">
         <table class="chat">
             <tr><td><p class="datebubble">Today</p></td></tr>
-            <tr><td><p class="botbubble">Halo! Bisa ceritakan masalahmu?</p><p class="bottime">18:02</p></td></tr>
-            <tr><td><p class="userbubble">Halo, perusahaan saya di bidang food and beverages, ingin bertanya bagaimana cara memasang ads untuk website kami</p><p class="usertime">18:02</p></td></tr>
-            <tr><td><p class="botbubble">Kamu ingin memasang advertisement dari penyedia iklan apa? (Instagram/Facebook/Google)</p><p class="bottime">18:02</p></td></tr>
-            <tr><td><p class="userbubble">Instagram</p><p class="usertime">18:02</p></td></tr>
-            <tr><td><p class="botbubble"><b>Cara memasang ads di Instagram:</b><br>1. Buat Fanpage di Facebook<br>2. Pilih Create Ads<br>3. Pilih tujuan beriklan<br>4. Tentukan target audiens dan anggaran<br>5. Format iklan</p><p class="bottime">18:02</p></td></tr>
-            <tr><td><p class="botbubble">Bila ada kendala, kamu bisa langsung menghubungi salah satu mentor kami dengan menekan tombol di bawah ini</p><p class="bottime">18:02</p></td></tr>
-            <tr><td><form><a href="http://localhost:5000/displayKontakMentor" id=hubmentorbutton class="hubungi-mentor-button"><b><i>Hubungi Mentor</i></b></a></form><p></p></td></tr>
+            <tr><td><p class="botbubble">Halo! Bisa ceritakan masalahmu?</p><p class="bottime">18:53</p></td></tr>
+            <tr><td><p class="userbubble">Halo, perusahaan saya di bidang food and beverages, ingin bertanya bagaimana cara memasang ads untuk website kami</p><p class="usertime">18:53</p></td></tr>
+            <tr><td><p class="botbubble">Kamu ingin memasang advertisement dari penyedia iklan apa? (Instagram/Facebook/Google)</p><p class="bottime">18:53</p></td></tr>
+            <tr><td><p class="userbubble">Instagram</p><p class="usertime">18:53</p></td></tr>
+            <tr><td><p class="botbubble"><b>Cara memasang ads di Instagram:</b><br>1. Buat Fanpage di Facebook<br>2. Pilih Create Ads<br>3. Pilih tujuan beriklan<br>4. Tentukan target audiens dan anggaran<br>5. Format iklan</p><p class="bottime">18:53</p></td></tr>
+            <tr><td><p class="botbubble">Bila ada kendala, kamu bisa langsung menghubungi salah satu mentor kami dengan menekan tombol di bawah ini</p><p class="bottime">18:53</p></td></tr>
+            <tr><td><form><a href="http://localhost:5000/displayKontakMentor" id=hubmentorbutton class="hubungi-mentor-button"><b><i>Hubungi Mentor</i></b></a></form></td></tr>
+            <tr><td><p class="botbubble">Nama mentor  : Johann<br>Keahlian     : Food And Beverages<br>Link meeting : <a href="https://meet.google.com/yyz-hraf-cdk">meet.google.com/yyz-hraf-cdk</a></p><p class="bottime">18:53</p></td></tr>
+            <tr><td><p class="userbubble">Makasih</p><p class="usertime">18:53</p></td></tr>
+            <tr><td><p class="botbubble">Sama-sama! Apakah ada hal lain yang bisa bot bantu?</p><p class="bottime">18:53</p></td></tr>
+            <tr><td><p class="userbubble">Halo, perusahaan saya di bidang food and beverages dan ingin bertanya bagaimana cara memasang ads instagram untuk website kami</p><p class="usertime">18:53</p></td></tr>
+            <tr><td><p class="botbubble"><b>Cara memasang ads di Instagram:</b><br>1. Buat Fanpage di Facebook<br>2. Pilih Create Ads<br>3. Pilih tujuan beriklan<br>4. Tentukan target audiens dan anggaran<br>5. Format iklan</p><p class="bottime">18:53</p></td></tr>
+            <tr><td><p class="botbubble">Bila ada kendala, kamu bisa langsung menghubungi salah satu mentor kami dengan menekan tombol di bawah ini</p><p class="bottime">18:53</p></td></tr>
+            <tr><td><form><a href="http://localhost:5000/displayKontakMentor" id=hubmentorbutton class="hubungi-mentor-button"><b><i>Hubungi Mentor</i></b></a></form></td></tr>
+            <tr><td><p class="botbubble">Nama mentor  : Johann<br>Keahlian     : Food And Beverage<br>Link meeting : <a href="https://meet.google.com/yyz-hraf-cdk">meet.google.com/yyz-hraf-cdk</a></p><p class="bottime">18:53</p></td></tr>
         </table>
     </div>
-    <form action="http://127.0.0.1:5000/Chat" method=POST>
+    <form action="http://localhost:5000/Chat" method=POST>
         <div class="messageBox">
             <input type="text" name="messageInput" id="message" placeholder="Type your message..." autocomplete="off">
             <input type="submit" id="send" name="sendButton" value="send">
         </div>
     </form>
+    </div>
     </body>
 </html>
