--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>SchedLINE</title>
+        <title>Pilihmentor.com</title>
         <style>
             div.chatscroll {
                 overflow-y: auto;
