--- a/src/static/styles/chatbotstyles.css
+++ b/src/static/styles/chatbotstyles.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0px;
+}
+
 p.botname {
     color: #373737;
     font-size: 20px;
@@ -11,15 +15,22 @@ a.botlink {
 
 div.header {
     height: 70px;
-    width: 402px;
+    width: 100%;
     background-color: #afc0db;
 }
- 
+
+div.chatarea {
+    width: 800px;
+    margin: auto;
+}
+
 div.chatscroll {
     overflow-y: auto;
     border: 1px solid black;
+    border-radius: 12px;
     height: 500px;
-    width: 400px;
+    width: 800px;
+    margin: 20px 0px 10px 0px;
     display: flex;
     flex-direction: column-reverse;
 }
@@ -42,7 +53,7 @@ img.avatar {
 }
 
 table.chat {
-    width: 400px;
+    width: 800px;
     border-collapse: separate;
     border-spacing: 10px 0px;
 }
@@ -112,8 +123,7 @@ p.usertime {
 }
 
 div.messageBox {
-    width: 400px;
-    border: 1px solid black;
+    width: 800px;
 }
 
 a.hubungi-mentor-button {
@@ -133,7 +143,7 @@ a.hubungi-mentor-button {
 
 #message {
     height: 24px;
-    width: 340px;
+    width: 740px;
 }
 
 #send {
