--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,15 +3,30 @@
     <head>
         <title>Pilihmentor.com</title>
         <link rel="stylesheet" href="static/styles/indexstyles.css">
+        <link rel="stylesheet" href="static/styles/headerstyles.css">
     </head>
     <body>
+        <div class="header">
+            <div class="header-box">
+                <table class="header-table">
+                    <tr>
+                        <td>
+                            <a class="header-text" href="http://localhost:5000/"><img class="header-logo" src="https://pilihmentor.com/wp-content/uploads/2021/10/logo.png" alt="Pilihmentor.com"></a>
+                        </td>
+                        <td>
+                            <a class="register-button" href="#">Register</a>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
         <div class="body">
             <table class="content-table">
                 <tr>
                     <td>
                         <div class="text-content">
                             <p class="slogan-text">Ceritakan masalah bisnismu dengan expert di <span class="brand-text">pilihmentor</span></p>
-                            <p class="deskripsi">Ceritakan masalah bisnismu, dan dapatkan solusi terbaik dari expert sebagai mentormu. Mulai dari Rp99rb, kamu akan dapat kesempatan 1-on-1 mentoring dengan para mentor expert tentang startup, bisnis, marketing dan masih banyak lagi!</p>
+                            <p class="deskripsi">Ceritakan masalah bisnismu, dan dapatkan solusi terbaik dari chatbot dalam sekejap. Jika jawaban tidak memuaskan, ada expert yang bisa menjadi mentormu. Mulai dari Rp99rb, kamu akan dapat kesempatan 1-on-1 mentoring dengan para mentor expert tentang startup, bisnis, marketing dan masih banyak lagi!</p>
                             <a href="http://localhost:5000/Chat" class="chat-button">CERITAKAN MASALAHMU DI SINI</a>
                         </div>
                     </td>
