--- a/src/static/styles/headerstyles.css
+++ b/src/static/styles/headerstyles.css
@@ -30,3 +30,8 @@
     background-color: #f3e527;
     float: right;
 }
+
+.register-button:hover {
+    background-color: #f5ed87;
+    cursor: pointer;
+}
